--- a/example/build.toml
+++ b/example/build.toml
@@ -1,8 +1,8 @@
 [dependencies]
 runner = "../zig-out/bin/dependencies"
 data = [
-  "com.hkupty.penna:penna-core:0.9.1",
-  "org.slf4j:slf4j-api:2.0.17"
+  "org.slf4j:slf4j-api:2.0.17",
+  "com.hkupty.penna:penna-core:0.9.1"
 ]
 
 [sources]
@@ -16,12 +16,13 @@ runner = "../zig-out/bin/compile"
 dependsOn = ["dependencies", "sources"]
 
 [compile.data]
-targetVersion = 24
-sourceVersion = 24
-args = [
-  "--Werror"
-]
+targetVersion = 21
+sourceVersion = 21
 
 # Virtual step, just triggers the execution of the previous steps
 [build]
+runner = "../zig-out/bin/javarun"
 dependsOn = ["dependencies", "sources", "compile"]
+
+[build.data]
+mainClass = "stuff.Stuff"
